--- a/app/templates/errorHandling.html
+++ b/app/templates/errorHandling.html
@@ -6,9 +6,13 @@
     </head>
     <body>
     {% if message %}
-        <h1>Error: {{ message }}</h1>
+        <h1>Invalid URL</h1>
+        <h3>
+            The URL entered is not valid, for conducting image augmentation on.<br>
+            Please check your URL.
+        </h3>
         <p>
-            The URL entered is not valid, for conducting image augmentation on.
+            Error: {{ message }}
         </p>
     {% endif %}
     </body>
