--- a/app/templates/error_handling.html
+++ b/app/templates/error_handling.html
@@ -3,6 +3,7 @@
     <head>
         <title>IOError</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
     </head>
     <body>
     {% if message %}
